// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`renderGo matches the snapshot for multi-version.json 1`] = `
"// Generated by @ht-sdks/events-cli@0.1.0 — do not edit.
// Requires peer github.com/ht-sdks/events-sdk-go v0.0.2 or later.

package analytics

import (
	"encoding/json"
	"time"

	htevents "github.com/ht-sdks/events-sdk-go"
)

type TrackOrderCompletedV1Payload struct {
	OrderID *string \`json:"orderId,omitempty"\`
}

type TrackOrderCompletedV2Payload struct {
	OrderID *string  \`json:"orderId,omitempty"\`
	Total   *float64 \`json:"total,omitempty"\`
}

type CallOptions struct {
	AnonymousID  string
	Context      *htevents.Context
	Integrations htevents.Integrations
	Timestamp    time.Time
	MessageID    string
}

func firstCallOptions(opts []CallOptions) CallOptions {
	if len(opts) == 0 {
		return CallOptions{}
	}
	return opts[0]
}

func cloneMap(m map[string]interface{}) map[string]interface{} {
	out := make(map[string]interface{}, len(m))
	for k, v := range m {
		out[k] = v
	}
	return out
}

func cloneContext(ctx *htevents.Context) *htevents.Context {
	if ctx == nil {
		return &htevents.Context{}
	}
	copied := *ctx
	if ctx.Extra != nil {
		copied.Extra = cloneMap(ctx.Extra)
	}
	return &copied
}

func setAtPath(root map[string]interface{}, path []string, value string) map[string]interface{} {
	if len(path) == 0 {
		return root
	}
	clone := cloneMap(root)
	cursor := clone
	for i := 0; i < len(path)-1; i++ {
		key := path[i]
		next, _ := cursor[key].(map[string]interface{})
		child := cloneMap(next)
		cursor[key] = child
		cursor = child
	}
	cursor[path[len(path)-1]] = value
	return clone
}

func toMap(v interface{}) (map[string]interface{}, error) {
	b, err := json.Marshal(v)
	if err != nil {
		return nil, err
	}
	var m map[string]interface{}
	if err := json.Unmarshal(b, &m); err != nil {
		return nil, err
	}
	if m == nil {
		m = map[string]interface{}{}
	}
	return m, nil
}

func withSchemaVersion(data map[string]interface{}, ctx *htevents.Context, path []string, version string, envelopeKey string) (map[string]interface{}, *htevents.Context) {
	if len(path) == 0 {
		return data, ctx
	}
	head, rest := path[0], path[1:]
	if head == envelopeKey {
		return setAtPath(cloneMap(data), rest, version), ctx
	}
	if head == "context" {
		next := cloneContext(ctx)
		next.Extra = setAtPath(cloneMap(next.Extra), rest, version)
		return data, next
	}
	return data, ctx
}

func TrackOrderCompletedV1(client htevents.Client, userID string, props TrackOrderCompletedV1Payload, opts ...CallOptions) error {
	o := firstCallOptions(opts)
	data, err := toMap(props)
	if err != nil {
		return err
	}
	data, ctx := withSchemaVersion(data, o.Context, nil, "v1", "properties")
	return client.Enqueue(htevents.Track{
		Event:        "Order Completed",
		UserId:       userID,
		AnonymousId:  o.AnonymousID,
		Properties:   htevents.Properties(data),
		Context:      ctx,
		Integrations: o.Integrations,
		Timestamp:    o.Timestamp,
		MessageId:    o.MessageID,
	})
}

func TrackOrderCompletedV2(client htevents.Client, userID string, props TrackOrderCompletedV2Payload, opts ...CallOptions) error {
	o := firstCallOptions(opts)
	data, err := toMap(props)
	if err != nil {
		return err
	}
	data, ctx := withSchemaVersion(data, o.Context, nil, "v2", "properties")
	return client.Enqueue(htevents.Track{
		Event:        "Order Completed",
		UserId:       userID,
		AnonymousId:  o.AnonymousID,
		Properties:   htevents.Properties(data),
		Context:      ctx,
		Integrations: o.Integrations,
		Timestamp:    o.Timestamp,
		MessageId:    o.MessageID,
	})
}

func TrackOrderCompleted(client htevents.Client, userID string, props TrackOrderCompletedV2Payload, opts ...CallOptions) error {
	return TrackOrderCompletedV2(client, userID, props, opts...)
}
"
`;

exports[`renderGo matches the snapshot for simple-track.json 1`] = `
"// Generated by @ht-sdks/events-cli@0.1.0 — do not edit.
// Requires peer github.com/ht-sdks/events-sdk-go v0.0.2 or later.

package analytics

import (
	"encoding/json"
	"time"

	htevents "github.com/ht-sdks/events-sdk-go"
)

type TrackOrderCompletedDefaultPayload struct {
	OrderID string   \`json:"orderId"\`
	Total   *float64 \`json:"total,omitempty"\`
}

type CallOptions struct {
	AnonymousID  string
	Context      *htevents.Context
	Integrations htevents.Integrations
	Timestamp    time.Time
	MessageID    string
}

func firstCallOptions(opts []CallOptions) CallOptions {
	if len(opts) == 0 {
		return CallOptions{}
	}
	return opts[0]
}

func cloneMap(m map[string]interface{}) map[string]interface{} {
	out := make(map[string]interface{}, len(m))
	for k, v := range m {
		out[k] = v
	}
	return out
}

func cloneContext(ctx *htevents.Context) *htevents.Context {
	if ctx == nil {
		return &htevents.Context{}
	}
	copied := *ctx
	if ctx.Extra != nil {
		copied.Extra = cloneMap(ctx.Extra)
	}
	return &copied
}

func setAtPath(root map[string]interface{}, path []string, value string) map[string]interface{} {
	if len(path) == 0 {
		return root
	}
	clone := cloneMap(root)
	cursor := clone
	for i := 0; i < len(path)-1; i++ {
		key := path[i]
		next, _ := cursor[key].(map[string]interface{})
		child := cloneMap(next)
		cursor[key] = child
		cursor = child
	}
	cursor[path[len(path)-1]] = value
	return clone
}

func toMap(v interface{}) (map[string]interface{}, error) {
	b, err := json.Marshal(v)
	if err != nil {
		return nil, err
	}
	var m map[string]interface{}
	if err := json.Unmarshal(b, &m); err != nil {
		return nil, err
	}
	if m == nil {
		m = map[string]interface{}{}
	}
	return m, nil
}

func withSchemaVersion(data map[string]interface{}, ctx *htevents.Context, path []string, version string, envelopeKey string) (map[string]interface{}, *htevents.Context) {
	if len(path) == 0 {
		return data, ctx
	}
	head, rest := path[0], path[1:]
	if head == envelopeKey {
		return setAtPath(cloneMap(data), rest, version), ctx
	}
	if head == "context" {
		next := cloneContext(ctx)
		next.Extra = setAtPath(cloneMap(next.Extra), rest, version)
		return data, next
	}
	return data, ctx
}

func TrackOrderCompletedDefault(client htevents.Client, userID string, props TrackOrderCompletedDefaultPayload, opts ...CallOptions) error {
	o := firstCallOptions(opts)
	data, err := toMap(props)
	if err != nil {
		return err
	}
	data, ctx := withSchemaVersion(data, o.Context, []string{"context", "protocols", "schemaVersion"}, "default", "properties")
	return client.Enqueue(htevents.Track{
		Event:        "Order Completed",
		UserId:       userID,
		AnonymousId:  o.AnonymousID,
		Properties:   htevents.Properties(data),
		Context:      ctx,
		Integrations: o.Integrations,
		Timestamp:    o.Timestamp,
		MessageId:    o.MessageID,
	})
}

func TrackOrderCompleted(client htevents.Client, userID string, props TrackOrderCompletedDefaultPayload, opts ...CallOptions) error {
	return TrackOrderCompletedDefault(client, userID, props, opts...)
}
"
`;

exports[`renderGo matches the snapshot for with-refs.json 1`] = `
"// Generated by @ht-sdks/events-cli@0.1.0 — do not edit.
// Requires peer github.com/ht-sdks/events-sdk-go v0.0.2 or later.

package analytics

import (
	"encoding/json"
	"time"

	htevents "github.com/ht-sdks/events-sdk-go"
)

type IdentifyDefaultPayload struct {
	Email *string \`json:"email,omitempty"\`
}

type TrackCartViewedDefaultPayload struct {
	Amount    float64  \`json:"amount"\`
	Currency  string   \`json:"currency"\`
	ItemCount *float64 \`json:"itemCount,omitempty"\`
}

type CallOptions struct {
	AnonymousID  string
	Context      *htevents.Context
	Integrations htevents.Integrations
	Timestamp    time.Time
	MessageID    string
}

func firstCallOptions(opts []CallOptions) CallOptions {
	if len(opts) == 0 {
		return CallOptions{}
	}
	return opts[0]
}

func cloneMap(m map[string]interface{}) map[string]interface{} {
	out := make(map[string]interface{}, len(m))
	for k, v := range m {
		out[k] = v
	}
	return out
}

func cloneContext(ctx *htevents.Context) *htevents.Context {
	if ctx == nil {
		return &htevents.Context{}
	}
	copied := *ctx
	if ctx.Extra != nil {
		copied.Extra = cloneMap(ctx.Extra)
	}
	return &copied
}

func setAtPath(root map[string]interface{}, path []string, value string) map[string]interface{} {
	if len(path) == 0 {
		return root
	}
	clone := cloneMap(root)
	cursor := clone
	for i := 0; i < len(path)-1; i++ {
		key := path[i]
		next, _ := cursor[key].(map[string]interface{})
		child := cloneMap(next)
		cursor[key] = child
		cursor = child
	}
	cursor[path[len(path)-1]] = value
	return clone
}

func toMap(v interface{}) (map[string]interface{}, error) {
	b, err := json.Marshal(v)
	if err != nil {
		return nil, err
	}
	var m map[string]interface{}
	if err := json.Unmarshal(b, &m); err != nil {
		return nil, err
	}
	if m == nil {
		m = map[string]interface{}{}
	}
	return m, nil
}

func withSchemaVersion(data map[string]interface{}, ctx *htevents.Context, path []string, version string, envelopeKey string) (map[string]interface{}, *htevents.Context) {
	if len(path) == 0 {
		return data, ctx
	}
	head, rest := path[0], path[1:]
	if head == envelopeKey {
		return setAtPath(cloneMap(data), rest, version), ctx
	}
	if head == "context" {
		next := cloneContext(ctx)
		next.Extra = setAtPath(cloneMap(next.Extra), rest, version)
		return data, next
	}
	return data, ctx
}

func IdentifyDefault(client htevents.Client, userID string, traits IdentifyDefaultPayload, opts ...CallOptions) error {
	o := firstCallOptions(opts)
	data, err := toMap(traits)
	if err != nil {
		return err
	}
	data, ctx := withSchemaVersion(data, o.Context, nil, "default", "traits")
	return client.Enqueue(htevents.Identify{
		UserId:       userID,
		AnonymousId:  o.AnonymousID,
		Traits:   htevents.Traits(data),
		Context:      ctx,
		Integrations: o.Integrations,
		Timestamp:    o.Timestamp,
		MessageId:    o.MessageID,
	})
}

func Identify(client htevents.Client, userID string, traits IdentifyDefaultPayload, opts ...CallOptions) error {
	return IdentifyDefault(client, userID, traits, opts...)
}

func TrackCartViewedDefault(client htevents.Client, userID string, props TrackCartViewedDefaultPayload, opts ...CallOptions) error {
	o := firstCallOptions(opts)
	data, err := toMap(props)
	if err != nil {
		return err
	}
	data, ctx := withSchemaVersion(data, o.Context, nil, "default", "properties")
	return client.Enqueue(htevents.Track{
		Event:        "Cart Viewed",
		UserId:       userID,
		AnonymousId:  o.AnonymousID,
		Properties:   htevents.Properties(data),
		Context:      ctx,
		Integrations: o.Integrations,
		Timestamp:    o.Timestamp,
		MessageId:    o.MessageID,
	})
}

func TrackCartViewed(client htevents.Client, userID string, props TrackCartViewedDefaultPayload, opts ...CallOptions) error {
	return TrackCartViewedDefault(client, userID, props, opts...)
}
"
`;
